--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,36 @@
+#principal{
+
+    width: 900px;
+    height: 500px;
+    
+}
+
 #body{
+
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBhchy5dzHxE1pmI3Q1ph28AnGxymLwf6S3Q&usqp=CAU");
     width: 100%;
     height: 1000px;
+}
+
+#fotografia{
+
+    border: 10px brown;
+
+}
+
+#navbar{
+
+    font-size: 30;
+    font-style: italic;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 900px;
+    
+
+}
+
+#sobreanna{
+    
+    font-size: 22px;
+    font-family: sans-serif;
+
 }
