--- a/styles.css
+++ b/styles.css
@@ -20,17 +20,25 @@
 
 #navbar{
 
-    font-size: 30;
+    font-size: 27;
     font-style: italic;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 900px;
-    
+    font-family: cursive;
+
 
 }
 
 #sobreanna{
     
-    font-size: 22px;
+    font-size: 19px;
     font-family: sans-serif;
 
+}
+
+a{
+    color:#4b566a;
+    text-decoration: none;
+    font-weight: bold;
+    border: 1px;
+    padding: 1px;
+    
 }
