--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ img{
     background-color:  #fffbda;
     text-align: left;
     height: 800px;
+    border-radius: 10px;
 }
 
 #sobreannacontato{
@@ -63,8 +64,17 @@ img{
     text-align: left;
     height: 800px;
     font-size: 20px;
+    border-radius: 10px;
 }
 
+
+#sobreannacampanhas{
+    background-color:  #fffbda;
+    text-align: left;
+    height: 2080px;
+    font-size: 20px;
+    border-radius: 10px;
+}
 .contato{
     font-family: 'Courier New', Courier, monospace;
 }
